--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
 		<div class="flex-w flex-sa p-r-200 respon1">
 			<div class="p-t-34 p-b-60 respon3">
-				<p class="l1-txt1 p-b-10 respon2">Our website is</p>
+				<p class="l1-txt1 p-b-10 respon2">Something Big is Coming…</p>
 
-				<h3 class="l1-txt2 p-b-45 respon2 respon4">Coming Soon</h3>
+				<h3 class="l1-txt2 p-b-45 respon2 respon4">Stay Tuned!</h3>
 
 				<div class="cd100"></div>
 			</div>
