--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
 	<title>9Yards - Coming Soon | Content Creation Agency</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="theme-color" content="#212282" />
+	<meta name="robots" content="index, follow" />
 	<meta name="description" content="9Yards Content House - Your premier content creation agency. Launching soon with innovative video production, social media management, and brand storytelling services." />
 	<meta name="keywords" content="content creation, video production, social media, brand storytelling, 9yards, marketing agency" />
 	<meta name="author" content="9Yards Content House" />
 	<meta property="og:title" content="9Yards - Coming Soon" />
 	<meta property="og:description" content="9Yards Content House - Your premier content creation agency launching soon." />
 	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://9yards.com" />
+	<meta property="og:image" content="https://9yards.com/images/icons/9yards-logo.png" />
+	
+	<!-- Structured Data -->
+	<script type="application/ld+json">
+	{
+		"@context": "https://schema.org",
+		"@type": "Organization",
+		"name": "9Yards Content House",
+		"description": "Premier content creation agency specializing in video production, social media management, and brand storytelling.",
+		"url": "https://9yards.com",
+		"logo": "https://9yards.com/images/icons/9yards-logo.png",
+		"sameAs": [
+			"https://www.instagram.com/9_yards_content_house_/",
+			"https://www.tiktok.com/@9.yards.content.house",
+			"https://www.youtube.com/@9Yards-ch",
+			"https://www.facebook.com/9yardscontenthouse"
+		]
+	}
+	</script>
 	<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="images/icons/9yards-favicon.jpg" />
 	<!--===============================================================================================-->
@@ -23,11 +46,14 @@
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css" />
+	<link rel="preload" href="vendor/animate/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" type="text/css" href="vendor/animate/animate.css" /></noscript>
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css" />
+	<link rel="preload" href="vendor/select2/select2.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css" /></noscript>
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/countdowntime/flipclock.css" />
+	<link rel="preload" href="vendor/countdowntime/flipclock.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" type="text/css" href="vendor/countdowntime/flipclock.css" /></noscript>
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="css/util.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -42,7 +68,7 @@
 			</div>
 
 			<div class="flex-w m-t-10 m-b-10">
-				<a href="#" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04 m-r-6" aria-label="Follow us on Facebook">
+				<a href="https://www.facebook.com/9yardscontenthouse" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04 m-r-6" aria-label="Follow us on Facebook">
 					<i class="fab fa-facebook-f"></i>
 				</a>
 
@@ -67,32 +93,18 @@
 				<h3 class="l1-txt2 p-b-45 respon2 respon4">Stay Tuned!</h3>
 
 				<div class="cd100"></div>
+				
+				<!-- Contact Info -->
+				<!-- <div class="contact-info m-t-50">
+					<p class="s1-txt2 p-b-10">Get in touch for early access and partnerships:</p>
+					<p class="s1-txt2">
+						<i class="fas fa-envelope m-r-10"></i>
+						<a href="mailto:info@9yards.co.ug" class="cl0">info@9yards.com</a>
+					</p>
+				</div> -->
 			</div>
 
-			<!-- <div class="bg0 wsize1 bor1 p-l-45 p-r-45 p-t-50 p-b-18 p-lr-15-sm">
-				<h3 class="l1-txt3 txt-center p-b-43">Newsletter</h3>
-
-				<form class="w-full validate-form">
-					<div class="wrap-input100 validate-input m-b-10" data-validate="Name is required">
-						<input class="input100 placeholder0 s1-txt1" type="text" name="name" placeholder="Name" />
-						<span class="focus-input100"></span>
-					</div>
-
-					<div class="wrap-input100 validate-input m-b-20"
-						data-validate="Valid email is required: ex@abc.xyz">
-						<input class="input100 placeholder0 s1-txt1" type="text" name="email" placeholder="Email" />
-						<span class="focus-input100"></span>
-					</div>
-
-					<button class="flex-c-m size2 s1-txt2 how-btn1 trans-04">
-						Subscribe
-					</button>
-				</form>
-
-				<p class="s1-txt3 txt-center p-l-15 p-r-15 p-t-25">
-					And don’t worry, we hate spam too! You can unsubcribe at anytime.
-				</p>
-			</div> -->
+			
 		</div>
 	</div>
 
@@ -123,21 +135,27 @@
 			}
 		});
 
-		// Initialize countdown
+		// Initialize countdown with error handling
 		$(document).ready(function() {
-			$(".cd100").countdown100({
-				/*Set Endtime here*/
-				/*Endtime must be > current time*/
-				endtimeYear: 2025,
-				endtimeMonth: 9,
-				endtimeDate: 1,
-				endtimeHours: 0,
-				endtimeMinutes: 0,
-				endtimeSeconds: 0,
-				timeZone: "",
-				// ex:  timeZone: "America/New_York"
-				//go to " http://momentjs.com/timezone/ " to get timezone
-			});
+			try {
+				$(".cd100").countdown100({
+					/*Set Endtime here*/
+					/*Endtime must be > current time*/
+					endtimeYear: 2025,
+					endtimeMonth: 9,
+					endtimeDate: 1,
+					endtimeHours: 0,
+					endtimeMinutes: 0,
+					endtimeSeconds: 0,
+					timeZone: "",
+					// ex:  timeZone: "America/New_York"
+					//go to " http://momentjs.com/timezone/ " to get timezone
+				});
+			} catch (error) {
+				console.warn('Countdown initialization failed:', error);
+				// Fallback: Show static message if countdown fails
+				$('.cd100').html('<p class="l1-txt1">Coming September 2025</p>');
+			}
 		});
 	</script>
 	<!--===============================================================================================-->
