Refactor layout and styles for improved responsiveness; adjust padding, margins, and alignment for better visual consistency across devices

--- a/index.html
+++ b/index.html
@@ -63,31 +63,31 @@
 <body>
 	<div class="bg-img1 size1 overlay1 p-t-24" style="background-image: url('images/bg01.jpg')">
 		<div class="flex-w flex-sb-m respon5">
-			<div class="wrappic1 m-r-30 m-t-10 m-b-10">
+			<div class="wrappic1">
 				<a href="/" aria-label="9Yards Content House Homepage"><img src="images/icons/9yards-logo.png" alt="9Yards Content House Logo" class="logo-img"/></a>
 			</div>
 
-			<nav class="flex-w m-t-10 m-b-10" aria-label="Social Media Links">
-				<a href="#" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04 m-r-6" aria-label="Follow us on Facebook">
+			<nav class="flex-w" aria-label="Social Media Links">
+				<a href="#" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04" aria-label="Follow us on Facebook">
 					<i class="fab fa-facebook-f"></i>
 				</a>
 
-				<a href="https://www.instagram.com/9yards_content_house/" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04 m-r-6" aria-label="Follow us on Instagram">
+				<a href="https://www.instagram.com/9yards_content_house/" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04" aria-label="Follow us on Instagram">
 					<i class="fab fa-instagram"></i>
 				</a>
 
-				<a href="https://www.tiktok.com/@9.yards.content.house" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04 m-r-6" aria-label="Follow us on TikTok">
+				<a href="https://www.tiktok.com/@9.yards.content.house" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04" aria-label="Follow us on TikTok">
 					<i class="fab fa-tiktok"></i>
 				</a>
 
-				<a href="https://www.youtube.com/@9Yards-ch" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04 m-r-6" aria-label="Subscribe to our YouTube">
+				<a href="https://www.youtube.com/@9Yards-ch" target="_blank" rel="noopener noreferrer" class="size3 flex-c-m how-social trans-04" aria-label="Subscribe to our YouTube">
 					<i class="fab fa-youtube"></i>
 				</a>
 			</nav>
 		</div>
 
-		<main class="flex-w flex-sa p-r-200 respon1">
-			<section class="p-t-34 p-b-60 respon3">
+		<main class="flex-w flex-sa respon1">
+			<section class="respon3">
 				<h1 class="l1-txt1 p-b-10 respon2">Something Big is Coming…</h1>
 
 				<h2 class="l1-txt2 p-b-45 respon2 respon4">Stay Tuned!</h2>
