Update page title and meta tags for consistency; correct author name and Open Graph title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>9Yards - Coming Soon | Content Creation Agency</title>
+	<title>9Yards - Coming Soon</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,13 +12,13 @@
 		content="9 Yards - Launching Soon! Join the Journey!" />
 	<meta name="keywords"
 		content="9 Yards - Launching Soon! Join the Journey!" />
-	<meta name="author" content="9Yards Content House" />
-	<meta property="og:title" content="9Yards - Coming Soon" />
+	<meta name="author" content="Stuart Muyambi" />
+	<meta property="og:title" content="Coming Soon" />
 	<meta property="og:description"
 		content="9 Yards - Launching Soon! Join the Journey!" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://9yards.co.ug" />
-	<meta property="og:image" content="https://9yards.co.ug/images/icons/9yards-logo.png" />
+	<meta property="og:image" content="https://9yards.co.ug/images/icons/9yards-favicon.jpg" />
 
 	<!-- Structured Data -->
 	<script type="application/ld+json">
