Enhance .htaccess for security and performance; optimize robots.txt and sitemap; update README and index.html for SEO; improve manifest.json for PWA support; create optimized util.css for better styling.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,40 @@
 	<meta name="theme-color" content="#212282" />
 	<meta name="robots" content="index, follow" />
 	<meta name="description"
-		content="9 Yards - Launching Soon! Join the Journey!" />
+		content="9 Yards Content House - Premier content creation agency launching soon. Specializing in video production, social media management, and brand storytelling." />
 	<meta name="keywords"
-		content="9 Yards - Launching Soon! Join the Journey!" />
-	<meta name="author" content="Stuart Muyambi" />
-	<meta property="og:title" content="Coming Soon" />
-	<meta property="og:description"
-		content="9 Yards - Launching Soon! Join the Journey!" />
+		content="9 Yards, content creation, video production, social media, branding, Uganda, coming soon, launch" />
+	<meta name="author" content="9Yards Content House" />
+	<meta name="language" content="English" />
+	<meta name="revisit-after" content="7 days" />
+	<meta name="distribution" content="global" />
+	<meta name="rating" content="general" />
+	<link rel="canonical" href="https://9yards.co.ug/" />
+	
+	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://9yards.co.ug" />
-	<meta property="og:image" content="https://9yards.co.ug/images/icons/9yards-favicon.jpg" />
+	<meta property="og:title" content="9Yards Content House - Coming Soon" />
+	<meta property="og:description"
+		content="Premier content creation agency launching soon. Specializing in video production, social media management, and brand storytelling." />
+	<meta property="og:image" content="https://9yards.co.ug/images/icons/9yards-logo.png" />
+	<meta property="og:site_name" content="9Yards Content House" />
+	<meta property="og:locale" content="en_US" />
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image" />
+	<meta property="twitter:url" content="https://9yards.co.ug" />
+	<meta property="twitter:title" content="9Yards Content House - Coming Soon" />
+	<meta property="twitter:description"
+		content="Premier content creation agency launching soon. Specializing in video production, social media management, and brand storytelling." />
+	<meta property="twitter:image" content="https://9yards.co.ug/images/icons/9yards-logo.png" />
+
+	<!-- PWA -->
+	<link rel="manifest" href="/manifest.json" />
+	<meta name="mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<meta name="apple-mobile-web-app-title" content="9Yards" />
 
 	<!-- Structured Data -->
 	<script type="application/ld+json">
@@ -68,7 +92,7 @@
 		<link rel="stylesheet" type="text/css" href="vendor/countdowntime/flipclock.css" />
 	</noscript>
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css" />
+	<link rel="stylesheet" type="text/css" href="css/util-optimized.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<!--===============================================================================================-->
 </head>
@@ -87,7 +111,7 @@
 					<i class="fab fa-facebook-f"></i>
 				</a>
 
-				<a href="https://www.instagram.com/9yards_content_house/" target="_blank" rel="noopener noreferrer"
+				<a href="https://www.instagram.com/9_yards_content_house_/" target="_blank" rel="noopener noreferrer"
 					class="size3 flex-c-m how-social trans-04" aria-label="Follow us on Instagram">
 					<i class="fab fa-instagram"></i>
 				</a>
