--- a/index.html
+++ b/index.html
@@ -97,6 +97,18 @@
 	<!--===============================================================================================-->
 </head>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KFQJ1N7T4Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KFQJ1N7T4Y');
+</script>
+
+
 <body>
 	<div class="bg-img1 size1 overlay1 p-t-24" style="background-image: url('images/bg01.jpg')">
 		<div class="flex-w flex-sb-m respon5">
