Update favicon and meta tags for improved branding and SEO

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>9Yards Content House | Digital Marketing & Creative Hub in Uganda</title>
+    <meta name="description" content="Discover 9Yards. Uganda’s home for digital marketing, content creation, and food delivery. Book our studio or grow your brand today.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/9yards/logo/9Yards-Logo-Full-Color.jpg">
 
     <!-- CSS here -->
     <!-- CSS here -->
@@ -28,24 +28,6 @@
 </head>
 
 <body class="tp-magic-cursor" data-bg-color="#f4f9f8">
-
-    <!-- Begin magic cursor -->
-    <div id="magic-cursor">
-        <div id="ball"></div>
-    </div>
-    <!-- End magic cursor -->
-
-    <!-- preloader -->
-
-    <!-- preloader -->
-    <div id="preloader">
-        <div class="preloader">
-            <span></span>
-            <span></span>
-        </div>
-    </div>
-    <!-- preloader end  -->
-    <!-- preloader end  -->
 
     <!-- back to top start -->
     <!-- back to top start -->
@@ -696,7 +678,7 @@
 
 
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            
+
             <!-- footer goes here -->
 
         </div>
