Update page titles and descriptions for improved SEO and clarity across the website

--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>Insights & Updates | 9Yards Blog</title>
+    <meta name="description" content="Get industry tips, case studies, and updates from 9Yards, Uganda’s leader in digital marketing and media.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
