--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>Contact 9Yards | Bookings & Inquiries</title>
+    <meta name="description" content="Reach 9Yards Content House in Kampala for services, studio bookings, or inquiries. Call, email, or visit us today.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
