--- a/legal/privacy-policy.html
+++ b/legal/privacy-policy.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>Privacy Policy | 9Yards Content House</title>
+    <meta name="description" content="Learn how 9Yards collects, uses, and protects your personal data across our services.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
