--- a/services/index.html
+++ b/services/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>Digital Marketing & Creative Services | 9Yards Uganda</title>
+    <meta name="description" content="Expert web design, social media, SEO, video production, and more. Tailored solutions to elevate your brand in Uganda.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
