--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>Client Testimonials | 9Yards Success Stories</title>
+    <meta name="description" content="Hear from clients about their success with 9Yards’ digital marketing, video production, and more.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
