--- a/ventures/foods.html
+++ b/ventures/foods.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <meta name="description" content="Delivering fresh meals to artists, influencers, and you.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
