--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>About 9Yards Content House</title>
+    <meta name="description" content="Learn about 9Yards’ mission, team, and creative ventures driving innovation in Uganda’s digital and media landscape.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
