--- a/faqs/index.html
+++ b/faqs/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>FAQs | 9Yards Services & Ventures</title>
+    <meta name="description" content="Find answers to common questions about 9Yards’ services, studio bookings, and food delivery in Uganda.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
