--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>9Yards Content House | Digital Marketing & Creative Hub in Uganda</title>
+    <meta name="description" content="Discover 9Yards — Uganda’s home for digital marketing, content creation, and food delivery. Book our studio or grow your brand today.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
