--- a/legal/terms-of-service.html
+++ b/legal/terms-of-service.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>Terms of Service | 9Yards Content House</title>
+    <meta name="description" content="Review the rules and guidelines for using 9Yards’ website and services.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
