--- a/services/website-design.html
+++ b/services/website-design.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <meta name="description" content="Build a stunning website with 9Yards. Optimized for performance and style.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
