--- a/ventures/index.html
+++ b/ventures/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>9Yards - Content House</title>
-    <meta name="description" content="">
+    <title>Our Ventures | 9Yards Brands & Subsidiaries</title>
+    <meta name="description" content="Explore 9Yards’ ventures: Content House for media, Films for video production, and Foods for fast delivery in Kampala.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
