--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico in the root directory -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/9yards/logo/9Yards-Logo-Full-Color.jpg">
 
     <!-- CSS here -->
 
