Update hero section text and styles for improved messaging and visual hierarchy

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                     <div class="dgm-hero-ptb grey-bg-2 fix z-index-1 p-relative">
                         <div class="dgm-hero-bg" data-background="assets/img/home-03/hero/hero-bg-shape.png"></div>
                         <div class="dgm-hero-rotate-text">
-                            <span>Award winning agency</span>
+                            <span>For Trust and Credibility</span>
                         </div>
                         <div class="dgm-hero-social-box">
                             <div class="dgm-hero-social-text">
@@ -269,16 +269,17 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="dgm-hero-content mb-120">
-                                        <span class="dgm-hero-subtitle tp_fade_anim" data-delay=".3">🔥 BEST MARKETING AGENCY</span>
+                                        <span class="dgm-hero-subtitle tp_fade_anim" data-delay=".3">🔥 FROM CONCEPT TO CONVERSION</span>
                                         <h4 class="dgm-hero-title tp_fade_anim" data-delay=".5">
-                                            Digital <img class="dgm-hero-title-mike d-none d-md-inline-block" src="assets/img/home-03/hero/mike.png" alt="9Yards Content House">
-                                            marketing agency
+                                            Digital Dominance. Go The Full 9 Yards.
+                                            <!-- Digital <img class="dgm-hero-title-mike d-none d-md-inline-block" src="assets/img/home-03/hero/mike.png" alt="9Yards Content House">
+                                            marketing agency -->
                                         </h4>
                                         <div class="tp_fade_anim" data-delay=".7">
                                             <a class="tp-btn-black-square" href="contact.html">
                                                 <span>
-                                                    <span class="text-1">Get in Touch</span>
-                                                    <span class="text-2">Get in Touch</span>
+                                                    <span class="text-1">Book a Strategy Call</span>
+                                                    <span class="text-2">Book a Strategy Call</span>
                                                 </span>
                                                 <i>
                                                     <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -304,7 +305,7 @@
                                             <div class="col-xl-4 col-lg-6 col-md-4 col-sm-6">
                                                 <div class="dgm-hero-funfact tp_fade_anim mb-40" data-delay=".9" data-fade-from="top" data-ease="bounce">
                                                     <span><i data-purecounter-duration="1" data-purecounter-end="125" class="purecounter">0</i>+</span>
-                                                    <p>Projects Completed <br> in 24 Countries</p>
+                                                    <p>Projects Completed <br> successfully</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -313,10 +314,10 @@
                             </div>
                         </div>
                         <div class="dgm-hero-thumb anim-zoomin-wrap">
-                            <div class="anim-zoomin">
+                            <!-- <div class="anim-zoomin">
                                 <img src="assets/img/home-03/hero/hero-img.png" alt="9Yards Content House">
-                            </div>
-                            <div class="dgm-hero-text-box" data-background="assets/img/home-03/hero/hero-text-shape.png">
+                            </div> -->
+                            <!-- <div class="dgm-hero-text-box" data-background="assets/img/home-03/hero/hero-text-shape.png">
                                 <img src="assets/img/home-03/hero/hi-shape.png" alt="9Yards Content House">
                                 <p>World-class digital media agency.</p>
                                 <a class="dgm-hero-arrow" href="contact.html">
@@ -328,7 +329,7 @@
                                         </svg>
                                     </span>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
