--- a/index.html
+++ b/index.html
@@ -193,10 +193,7 @@
                                             <path d="M16 2.5C16 1.675 15.325 1 14.5 1H2.5C1.675 1 1 1.675 1 2.5M16 2.5V11.5C16 12.325 15.325 13 14.5 13H2.5C1.675 13 1 12.325 1 11.5V2.5M16 2.5L8.5 7.75L1 2.5" stroke="currentcolor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                                         </svg>
                                     </i>
-                                    <span>
-                                        <span class="text-1">Let's Talk</span>
-                                        <span class="text-2">Let's Talk</span>
-                                    </span>
+                                    <span>Let's Talk</span>
                                 </a>
                             </div>
                             <div class="tp-header-bar ml-15 d-xl-none">
