Refactor contact and navigation links for improved clarity and consistency

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <div class="tp-offcanvas-contact">
                     <h3 class="tp-offcanvas-title sm">Let's Talk</h3>
                     <ul>
-                        <li><a href="tel:1245654">+256700488870</a></li>
-                        <li><a href="mailto:hello@diego.com">info@9yards.co.ug</a></li>
+                        <li><a href="+256700488870">+256700488870</a></li>
+                        <li><a href="mailto:info@9yards.co.ug">info@9yards.co.ug</a></li>
                         <li><a href="#">Kampala, Bunga Kalungu Road</a></li>
                     </ul>
                 </div>
@@ -143,51 +143,51 @@
                                     <ul>
                                         <li><a href="index.html">Home</a></li>
                                         <li class="has-dropdown">
-                                            <a href="services/index.html">Services</a>
+                                            <a href="#">Services</a>
                                             <ul class="tp-submenu submenu">
                                                 <li class="menu-item-has-children">
-                                                    <a href="services/digital-marketing.html">Digital Marketing</a>
+                                                    <a href="#">Digital Marketing</a>
                                                     <ul class="tp-submenu submenu">
-                                                        <li><a href="services/social-media-management.html">Social Media Management</a></li>
-                                                        <li><a href="services/email-marketing.html">Email Marketing</a></li>
-                                                        <li><a href="services/copywriting.html">Copywriting</a></li>
-                                                        <li><a href="services/influencer-marketing.html">Influencer Marketing</a></li>
-                                                        <li><a href="services/strategy.html">Strategy Development</a></li>
+                                                        <li><a href="#">Social Media Management</a></li>
+                                                        <li><a href="#">Email Marketing</a></li>
+                                                        <li><a href="#">Copywriting</a></li>
+                                                        <li><a href="#">Influencer Marketing</a></li>
+                                                        <li><a href="#">Strategy Development</a></li>
                                                     </ul>
                                                 </li>
                                                 <li class="menu-item-has-children"><a href="#">Creative & Branding</a>
                                                     <ul class="tp-submenu submenu">
-                                                        <li><a href="services/graphics-and-branding.html">Graphics Design</a></li>
-                                                        <li><a href="services/ad-creative.html">Ad Creative</a></li>
-                                                        <li><a href="services/branding-services.html">Branding Services</a></li>
-                                                        <li><a href="services/video-production.html">Video Production</a></li>
+                                                        <li><a href="#">Graphics Design</a></li>
+                                                        <li><a href="#">Ad Creative</a></li>
+                                                        <li><a href="#">Branding Services</a></li>
+                                                        <li><a href="#">Video Production</a></li>
                                                     </ul>
                                                 </li>
                                                 <li class="menu-item-has-children"><a href="#">Web & AI</a>
                                                     <ul class="tp-submenu submenu">
-                                                        <li><a href="services/website-design.html">Website Design</a></li>
-                                                        <li><a href="services/seo.html">Search Engine Optimization</a></li>
-                                                        <li><a href="services/ai-search-optimization.html">AI Search Optimization</a></li>
+                                                        <li><a href="#">Website Design</a></li>
+                                                        <li><a href="#">Search Engine Optimization</a></li>
+                                                        <li><a href="#">AI Search Optimization</a></li>
                                                     </ul>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li class="has-dropdown">
-                                            <a href="ventures/index.html">Our Ventures</a>
+                                            <a href="#">Our Ventures</a>
                                             <ul class="tp-submenu submenu">
-                                                <li><a href="ventures/content-house.html">9Yards Content House</a></li>
-                                                <li><a href="ventures/films.html">9Yards Films</a></li>
-                                                <li><a href="ventures/foods.html">9Yards Foods</a></li>
+                                                <li><a href="#">9Yards Content House</a></li>
+                                                <li><a href="#">9Yards Films</a></li>
+                                                <li><a href="#">9Yards Foods</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="portfolio/index.html">Why Us</a></li>
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <li><a href="#">Why Us</a></li>
+                                        <li><a href="#">About Us</a></li>
+                                        <li><a href="#">Contact Us</a></li>
                                     </ul>
                                 </nav>
                             </div>
                             <div class="tp-header-btn d-none d-md-flex">
-                                <a class="tp-btn-yellow-green green-solid" href="contact.html">
+                                <a class="tp-btn-yellow-green green-solid" href="#">
                                     <i>
                                         <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M16 2.5C16 1.675 15.325 1 14.5 1H2.5C1.675 1 1 1.675 1 2.5M16 2.5V11.5C16 12.325 15.325 13 14.5 13H2.5C1.675 13 1 12.325 1 11.5V2.5M16 2.5L8.5 7.75L1 2.5" stroke="currentcolor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
@@ -278,7 +278,7 @@
                                             </p>
                                         </div>
                                         <div class="tp_fade_anim" data-delay=".7">
-                                            <a class="tp-btn-black-square" href="booking/">
+                                            <a class="tp-btn-black-square" href="#">
                                                 <span>
                                                     <span class="text-1">Book a Strategy Call</span>
                                                     <span class="text-2">Book a Strategy Call</span>
@@ -368,7 +368,7 @@
                                             </p>
                                         </div>
                                         <div>
-                                            <a class="tp-btn-yellow-green green-solid btn-60 mb-50" href="about.html">
+                                            <a class="tp-btn-yellow-green green-solid btn-60 mb-50" href="#">
                                                 <span>
                                                     <span class="text-1">More about us</span>
                                                     <!-- <span class="text-2">More about us</span> -->
