Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <!-- hero area start -->
                 <div class="dgm-hero-top pt-20">
                     <div class="dgm-hero-ptb grey-bg-2 fix z-index-1 p-relative">
-                        <div class="dgm-hero-bg" data-background="#"></div>
+                        <div class="dgm-hero-bg" data-background="assets/img/9yards/square-patterns.png"></div>
                         <!-- <div class="dgm-hero-rotate-text">
                             <span>Digital Excellence From Kampala</span>
                         </div> -->
@@ -370,8 +370,8 @@
                                         <div>
                                             <a class="tp-btn-yellow-green green-solid btn-60 mb-50" href="#">
                                                 <span>
-                                                    <span class="text-1">More about us</span>
-                                                    <!-- <span class="text-2">More about us</span> -->
+                                                    <span class="text-1">Learn More</span>
+                                                    <span class="text-2">Learn More</span>
                                                 </span>
                                                 <i>
                                                     <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -386,7 +386,7 @@
                                         <div class="dgm-about-review-wrap tp_fade_anim" data-delay=".6">
                                             <div class="dgm-about-review-box d-inline-flex align-items-center">
                                                 <div class="dgm-about-review">
-                                                    <h4>4.9</h4>
+                                                    <h4>4.8</h4>
                                                     <span>( 24 review )</span>
                                                 </div>
                                                 <div class="dgm-about-ratting">
